--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Вычисление ИМТ</h2>
+    <header>
+        <h2>Вычисление ИМТ</h2>
+    </header>
+    
     <p>
         Вес, кг:&nbsp; <input type="text" id = "weight" placeholder="Введите значение">
     </p>
@@ -32,5 +35,8 @@
         </div>
     </main>
     <script src="script.js"></script>
+    <footer>
+        (С) Гигбрейнс
+    </footer>
 </body>
 </html>
