--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h2>Вычисление ИМТ</h2>
     </header>
-    
+    <div class="content">
     <p>
         Вес, кг:&nbsp; <input type="text" id = "weight" placeholder="Введите значение">
     </p>
@@ -34,9 +34,10 @@
             Обычно ИМТ используется для грубой оценки, и он не учитывает такие факторы, как распределение жира, мышечная масса, возраст и пол. В результате один и тот же ИМТ может означать разные степени здоровья у разных людей. Тем не менее, он является одним из инструментов для начальной оценки веса и связанных с ним рисков для здоровья.
         </div>
     </main>
+    </div>
     <script src="script.js"></script>
     <footer>
-        (С) Гигбрейнс
+        (С) Гигбрейнс Васильев Павел
     </footer>
 </body>
 </html>
